# GHOST_CB_DOTS

./: .directory  .gitignore  MOVE_ALL.bat.lnk  README.md  ghost.sln  meson.build  motd.txt
Debug MySQL/: default.cfg  ghost.dbs  ghost_log.txt  language_russian.cfg  players.txt  stat_string.txt  statuslog.txt
Debug MySQL/mapcfgs/: (2)LastRefuge-1.3-2.cfg  dots.cfg  ref_dots.cfg  tba.cfg  tba_orig.cfg
Release MySQL/: MOVE_2.bat  MOVE_ALL.bat  default.cfg  ghost.dbs  ghost_log.txt  stat_string.txt
Release MySQL/mapcfgs/: dots.cfg  tba.cfg
StormLib/: StormLib.sln  StormLib.vcxproj  StormLib.vcxproj.filters
TCP READ TESTER/: Program.cs
TCP READ TESTER/TCP READ/: TCP READ.csproj  TCP READ.sln
TCP READ TESTER/TCP READ/Properties/: AssemblyInfo.cs
VS/: dodsghost.sln
VS/src/: 25a6634@@ghost@exe.vcxproj  MOVE_TBA.bat  default.cfg
VS/src/mapcfgs/: tba.cfg
VS/src/maps/: (2)Amazonia.w3x
boost_1_72_0/lib/: libboost_chrono-vc142-mt-gd-x32-1_72.lib  libboost_chrono-vc142-mt-x32-1_72.lib  libboost_date_time-vc142-mt-gd-x32-1_72.lib  libboost_date_time-vc142-mt-x32-1_72.lib  libboost_filesystem-vc142-mt-x32-1_72.lib  libboost_thread-vc142-mt-gd-x32-1_72.lib  libboost_thread-vc142-mt-x32-1_72.lib
cursesmod2/: cursesmod2.sln
cursesmod2/cursesmod2/: common.cpp  common.h  cursesmod2.vcproj  layout.cpp  layout.h  listwidget.cpp  listwidget.h  main.cpp  widget.cpp  widget.h  window.cpp  window.h
docs/: ghost cb changelog.txt  w3g_actions.txt  w3g_format.txt
ghost/: Makefile  StormLibRAS.lib  StormLibRAS_bad.lib  bnet.cpp  bnet.h  bnetprotocol.cpp  bnetprotocol.h  convert to UTF8.py  csvparser.cpp  game.cpp  game.h  game_admin.cpp  game_base.cpp  game_base.h  gameplayer.cpp  gameplayer.h  gameprotocol.h  gcbiprotocol.cpp  gcbiprotocol.h  ghost.cpp  ghost.h  ghost.vcproj  ghost.vcxproj  ghost.vcxproj.filters  ghostdb.cpp  ghostdb.h  ghostdbmysql.cpp  ghostdbmysql.h  ghostdbsqlite.cpp  ghostdbsqlite.h  includes.h  language.cpp  language.h  map.cpp  map.h  resource.h  sha1.h  socket.cpp  socket.h  statsdota.cpp  (+5 more)
ghost/Release MySQL/ghost.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ghost.lastbuildstate  ghost.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
include/: sqlite3.h
include/bncsutil/: bncsutil.h  buffer.h  file.h  mpir.h  mutil.h
include/mysql/: mariadb_version.h
lib/x86_64/windows/mingw/: bncsutil.lib  gmp.lib  libcurl.lib  mariadbclient.lib  pdcurses.lib  sqlite3.lib  ssp.lib  storm.lib  z.lib
lib/x86_64/windows/msvc/: bncsutil.lib  gmp.lib  libcurl.lib  libssl.lib  mariadbclient.lib  pdcurses.lib  sqlite3.lib  storm.lib  z.lib
src/: bncsutilinterface.cpp  bncsutilinterface.h  bnet.cpp  bnet.h  bnetprotocol.cpp  bnetprotocol.h  bnlsclient.cpp  bnlsclient.h  bnlsprotocol.cpp  bnlsprotocol.h  commandpacket.cpp  commandpacket.h  config.cpp  config.h  crc32.cpp  crc32.h  csvparser.cpp  csvparser.h  game.cpp  game.h  game_admin.cpp  game_admin.h  game_base.cpp  game_base.h  gameplayer.cpp  gameplayer.h  gameprotocol.cpp  gameprotocol.h  gameslot.cpp  gameslot.h  gcbiprotocol.cpp  gcbiprotocol.h  ghost.cpp  ghost.h  ghostdb.cpp  ghostdb.h  ghostdbmysql.cpp  ghostdbmysql.h  ghostdbsqlite.cpp  ghostdbsqlite.h  (+31 more)
update_dota_elo/: update_dota_elo.cpp  update_dota_elo.vcxproj
update_w3mmd_elo/: update_w3mmd_elo.cpp  update_w3mmd_elo.vcxproj
